--- a/tmuxp.projects.yaml
+++ b/tmuxp.projects.yaml
@@ -4,68 +4,18 @@ windows:
   panes:
     -
 - window_name: aws
-  panes:
-    - awskeys export default
 - window_name: blog
-  start_directory: ${PROJECT_ROOT}/coregen/coregen-blog
-  layout: main-vertical
-  options:
-    main-pane-width: 150
+  start_directory: ${PROJECTS}/coregen/coregen-blog
+    #  layout: main-vertical
+    #  options:
+    #    main-pane-width: 4000
   panes:
     - shell_command:
       - vim .
     - shell_command:
       - hugo serve --buildDrafts
-- window_name: coregen
-  start_directory: ${PROJECT_ROOT}/coregen/coregen
-  layout: main-vertical
-  options:
-    main-pane-width: 150
-  panes:
-    - shell_command:
-      - vim .
-    -
-- window_name: techbox
-  start_directory: ${PROJECT_ROOT}/coregen/techbox
-  layout: main-vertical
-  options:
-    main-pane-width: 150
-  panes:
-    - shell_command:
-      - vim .
-    -
 - window_name: infra
-  start_directory: ${PROJECT_ROOT}/coregen/infra
+  start_directory: ${PROJECTS}/coregen/infra
   panes:
     - shell_command:
       - vim .
-- window_name: openbalkans
-  start_directory: ${PROJECT_ROOT}/coregen/openbalkans
-  layout: main-vertical
-  options:
-    main-pane-width: 150
-  panes:
-    - shell_command:
-      - workon openbalkans-env
-      - vim .
-    -
-- window_name: corax
-  start_directory: ${PROJECT_ROOT}/coregen/corax
-  layout: main-vertical
-  options:
-    main-pane-width: 150
-  panes:
-    - shell_command:
-      - workon corax-env
-      - vim .
-    -
-- window_name: tengu
-  start_directory: ${PROJECT_ROOT}/coregen/tengu
-  layout: main-vertical
-  options:
-    main-pane-width: 150
-  panes:
-    - shell_command:
-      - workon tengu-env
-      - vim .
-    -
